# omnireduce

./: .gitmodules  README.md
omnireduce-DPDK/: README.md  build_all.sh  environment.yml  get_cuda_arch_code.sh  gloo.patch  prepare.sh  pytorch.patch
omnireduce-DPDK/daiet/: .gitignore  Makefile  README.md
omnireduce-DPDK/daiet/example/: CMakeLists.txt  daiet.cfg  main.cpp
omnireduce-DPDK/daiet/experiments/exp1/: CMakeLists.txt  common.h  main.cc
omnireduce-DPDK/daiet/experiments/exp2/: CMakeLists.txt  README.md  common.h  float16.cc  float32.cc  int32.cc  switchml_dense.cc
omnireduce-DPDK/daiet/ps/: Makefile  ps.cfg
omnireduce-DPDK/daiet/ps/src/: main.cpp  params.cpp  params.hpp  ps.cpp  ps.hpp  stats.cpp  stats.hpp  utils.cpp  utils.hpp
omnireduce-DPDK/daiet/scripts/: dpdk-config.sh
omnireduce-DPDK/daiet/src/: DaietContext.cpp  DaietContext.hpp  common.cpp  common.hpp  daiet.cpp  daiet.hpp  dpdk.h  msgs.h  params.cpp  params.hpp  ps.cpp  ps.hpp  stats.cpp  stats.hpp  utils.cpp  worker.cpp  worker.hpp
omnireduce-DPDK/docker/: Dockerfile  aggregator_Dockerfile
omnireduce-RDMA/: Makefile  README.md
omnireduce-RDMA/docker/: Dockerfile  README.md
omnireduce-RDMA/docs/: tutorial.md
omnireduce-RDMA/example/: Makefile  README.md  aggregator_test.cpp  cuda_worker_test.cpp  omnireduce.cfg  worker_test.cpp
omnireduce-RDMA/frameworks_integration/horovod_patch/: README.md  omnireduce-horovod.patch  test_hvd_tensorflow.py  test_hvd_torch.py
omnireduce-RDMA/frameworks_integration/pytorch_patch/: README.md  omnireduce-pytorch.patch
omnireduce-RDMA/omnireduce/: aggcontext.cpp  aggcontext.hpp  aggregator.cpp  aggregator.hpp  common.cpp  common.hpp  context.cpp  context.hpp  cuda_utils.cu  cuda_utils.hpp  omnireduce.cpp  omnireduce.hpp  params.cpp  params.hpp  worker.cpp  worker.hpp
